Style article on #show and stop css overlap

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -2,15 +2,18 @@
     --paper-background: url("article_background.jpg");
 }
 
-/* FIXME: this applies to the main index page for some reason */
-/* main {
+main.show {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-} */
+    padding: 2%;
+    background-color: rgba(128, 128, 128, 0.7);
+    grid-area: main;
+}
 
 #article {
     width: 90%;
+    height: auto;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 2fr 7fr 1fr;
@@ -19,11 +22,13 @@
     background-position: center;
     background-size: cover;
     overflow: scroll;
+    padding: 2%;
 }
 
 #article > h1 {
     grid-row: 1 / 2;
     grid-column: span 8;
+    text-align: center;
 }
 
 #body {
@@ -31,9 +36,19 @@
     grid-column: span 8;
 }
 
+#timestamp,
+#edit,
+#comment_count,
+#comment,
+#delete {
+    justify-self: center;
+    align-self: center;
+}
+
 #timestamp {
     grid-row: 3 / 4;
     grid-column: 1 / 4;
+    font-size: 1vw;
 }
 
 #edit {
@@ -44,6 +59,8 @@
 #comment_count {
     grid-row: 3 / 4;
     grid-column: 6 / 7;
+    font-size: 24rem;
+    margin-top: -20%;
 }
 
 #comment {
